--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/x-data-grid": "^5.17.16",
     "@mui/x-data-grid-generator": "^5.17.15",
     "@next/font": "13.1.0",
+    "@prisma/client": "^4.8.0",
     "@types/axios": "^0.14.0",
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
@@ -26,6 +27,7 @@
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.0",
     "next": "13.1.0",
+    "prisma": "^4.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^5.3.6",
