--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "axios": "^1.2.1",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.0",
-    "next": "13.1.0",
+    "next": "^13.5.6",
     "prisma": "^4.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
